# rm_sys_django

./: .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  tutorial.md
api/: alteration.py  models.py  permission.py  urls.py  views.py
dao/: trigger.py
dao/maria/: alert.py  game.py  statistic_parent_.py  statistic_user_.py  user.py
dao/mongo/: gamedetail.py
risk/: models.py  services.py  urls.py  views.py
risk/management/commands/: migrate_cmd.py
risk/migrations/: 0001_initial.py  0002_auto_20210505_1615.py
risk/templates/: 30d_risks_info.html  agent_alert.html  arcade_alert.html  base.html  base_alert.html  fish_alert.html  index.html  live_alert.html  online_risk_player.html  slot_alert.html  slot_risk_player.html  sport_alert.html  table_alert.html  timer.html
risk/templatetags/: permission_filter.py
rmsys/: adapter.py  asgi.py  dbrouter.py  form.py  urls.py  util.py  wsgi.py
rmsys/settings/: default.py  deploy.py  deploy_int.py  dev.py  dev_official.py  dev_redis.py
templates/registration/: login.html
tests/: test_api.py  test_dao.py  test_models.py  test_services.py  test_views.py
ws/: consumers.py  routing.py  urls.py
